--- a/demo/index.html
+++ b/demo/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script type="module" src="../src/expense-input.js"></script>
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+    <script type="module" src="../src/expense-tracker.js"></script>
+    <style>
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #f5f5f5;
+      }
+    </style>
   </head>
   <body>
-    <expense-input id="expenseInput"></expense-input>
+    <expense-tracker id="tracker"></expense-tracker>
     <script>
-      const expenseInput = document.getElementById('expenseInput');
+      const tracker = document.getElementById('tracker');
 
-      expenseInput.users = [
+      tracker.users = [
         {
           name: 'Andrei',
         },
