--- a/demo/index.html
+++ b/demo/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+    <link rel="shortcut icon" href="favicon.ico">
     <script type="module" src="../src/expense-tracker.js"></script>
     <style>
       body {
@@ -9,6 +10,7 @@
         background-color: #f5f5f5;
       }
     </style>
+    <title>Expense tracker</title>
   </head>
   <body>
     <expense-tracker id="tracker"></expense-tracker>
