DEV restructure project

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-    <link rel="shortcut icon" href="favicon.ico">
-    <script type="module" src="../src/expense-tracker.js"></script>
+    <link rel="shortcut icon" href="assets/favicon.ico">
+    <script type="module" src="src/expense-tracker.js"></script>
     <style>
       body {
         font-family: Arial, Helvetica, sans-serif;
